--- a/isla-catalina-and-snorkel.html
+++ b/isla-catalina-and-snorkel.html
@@ -151,7 +151,7 @@
 <body>
 
     <!-- Botón "Regresar" -->
-    <a href="javascript:history.back()" class="btn-regresar">Regresar</a>
+    <a href="javascript:history.back()" class="btn-regresar">Go back</a>
 
     <div class="producto-card">
         <img src="assets/img/snorkel2.jpg" alt="1 PAX">
