--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@ html[lang="es"] {
         
     </div>
     
- <div class="platilloos tours">
+ <div class="platilloos tours buggy">
         <a href="polari.html">
             <img src="assets/img/buggys3producto.webp" alt="SHOPPING">
         </a>
