--- a/Hacienda park.html
+++ b/Hacienda park.html
@@ -157,7 +157,7 @@
         <img src="paginas/hacienda2.jpg" alt="1 PAX">
         <h3>Hacienda Park</h3>
         <p>Embark on a thrilling 7-in-1 adventure with transport and a dedicated guide. Start with a scenic horseback ride through stunning landscapes, followed by a thrilling buggy safari tour. Experience nature up close as you zipline across the beautiful terrain. Enjoy a delicious traditional lunch, then cool off with a refreshing swim in a nearby river. Finally, visit a typical house surrounded by plantations to learn about local culture and agriculture. This all-inclusive experience combines adventure, nature, and authentic culture, all tailored just for you.</p>
-        <div class="precio">$90</div>
+        <div class="precio">$99</div>
 
         <!-- Formulario de compra -->
         <form id="form-compra">
@@ -255,7 +255,7 @@
             btnWhatsApp.style.display = "inline-block"; // Mostrar el enlace de WhatsApp
 
             // Crear el enlace para Gmail
-            var enlaceGmail = "mailto:harmonyexcursions@outlook.com?subject=Reserva%20de%20Producto%20Buggy&body=" + mensajeCodificado;
+            var enlaceGmail = "mailto:harmonyexcursions@outlook.com?subject=Reserva%20de%20aventura a %20Hacienda Park&body=" + mensajeCodificado;
             
             // Mostrar el enlace de Gmail
             var btnGmail = document.getElementById("btn-reservar-gmail");
