--- a/Samanawithwhales.html
+++ b/Samanawithwhales.html
@@ -228,7 +228,7 @@
             var precioTotal = document.getElementById("precio-total").textContent.replace('Precio Total: $', '');
 
             // Crear el mensaje de WhatsApp
-            var mensaje = "Hola, me interesa reservar la aventura en buggys. Aquí están mis datos:\n";
+            var mensaje = "Hola, me interesa reservar para Samana en Temporada de Ballenas. Aquí están mis datos:\n";
             mensaje += "Nombre: " + nombre + " " + apellido + "\n";
             mensaje += "Correo electrónico: " + email + "\n";
             mensaje += "Hotel: " + hotel + "\n";
