--- a/isla-saona-and-diving.html
+++ b/isla-saona-and-diving.html
@@ -6,8 +6,8 @@
     <title>Catálogo de Producto</title>
     <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&display=swap" rel="stylesheet">
     <style>
-         /* Asegura que el contenido ocupe al menos el 100% de la altura de la ventana */
-         body {
+        /* Asegura que el contenido ocupe al menos el 100% de la altura de la ventana */
+        body {
             font-family: 'Mulish', sans-serif;
             margin: 0;
             background-color: #f4f4f4;
@@ -125,30 +125,30 @@
     <main>
         <div class="producto-card">
             <img src="assets/img/Saonadiving1.jpg" alt="Producto 1">
-            <h3>1 PAX</h3>
-            <p>Descripción breve del producto. Este es un excelente artículo para todo tipo de situaciones.</p>
+            <h3>Saona Island and Diving - 1 PAX</h3>
+            <p>Una experiencia única de buceo y excursión en la isla Saona. Perfecta para un aventurero solitario.</p>
             <div class="precio">$150</div>
-            <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20Producto%201%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
+            <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20la%20excursión%20Saona%20Island%20and%20Diving%20de%201%20PAX%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
                 BOOKING NOW
             </a>
         </div>
 
         <div class="producto-card">
             <img src="assets/img/Saonadiving2.jpg" alt="Producto 2">
-            <h3>2 PAX</h3>
-            <p>Este producto es ideal para quienes buscan calidad y durabilidad. Perfecto para tu día a día.</p>
+            <h3>Saona Island and Diving - 2 PAX</h3>
+            <p>Ideal para dos personas que buscan disfrutar de un día perfecto en la Isla Saona y una inmersión en aguas cristalinas.</p>
             <div class="precio">$200</div>
-            <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20Producto%201%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
+            <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20la%20excursión%20Saona%20Island%20and%20Diving%20de%202%20PAX%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
                 BOOKING NOW
             </a>
         </div>
 
         <div class="producto-card">
             <img src="assets/img/Saonadiving3.jpg" alt="Producto 3">
-            <h3>10 PAX</h3>
-            <p>Un artículo innovador que no te puede faltar. Perfecto para regalar o para tu propio uso.</p>
+            <h3>Saona Island and Diving - 10 PAX</h3>
+            <p>Para grupos grandes, esta excursión ofrece una experiencia memorable de buceo y excursión por la Isla Saona.</p>
             <div class="precio">$120</div>
-            <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20Producto%201%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
+            <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20la%20excursión%20Saona%20Island%20and%20Diving%20de%2010%20PAX%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
                 BOOKING NOW
             </a>
         </div>
