--- a/private-speedboat-excursion-to-saona-island.html
+++ b/private-speedboat-excursion-to-saona-island.html
@@ -148,7 +148,7 @@
                 Enjoy a VIP experience with a private speedboat ride to Saona Island. Relax on the stunning beaches, snorkel in vibrant reefs, and swim in natural pools. Savor an all-inclusive buffet lunch and unlimited drinks. A personalized, unforgettable day in paradise!</p>
             <div class="precio">$1400</div>
             <!-- Botones de reserva -->
-            <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20Producto%201%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
+            <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20la%20Private speedboat para 6 to 10 PAX!" class="btn-reservar" target="_blank">
                 BOOKING NOW (WhatsApp)
             </a>
             <a href="mailto:harmonyexcursions@outlook.com?subject=Reserva%20de%20Producto%201&body=Me%20interesa%20reservar%20el%20Producto%201." class="btn-reservar-gmail" target="_blank">
@@ -164,7 +164,7 @@
                 Enjoy a VIP experience with a private speedboat ride to Saona Island. Relax on the stunning beaches, snorkel in vibrant reefs, and swim in natural pools. Savor an all-inclusive buffet lunch and unlimited drinks. A personalized, unforgettable day in paradise!</p>
             <div class="precio">$1900</div>
             <!-- Botones de reserva -->
-            <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20Producto%202%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
+            <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20la%20Private speedboat para 11 to 15 PAX!" class="btn-reservar" target="_blank">
                 BOOKING NOW (WhatsApp)
             </a>
             <a href="mailto:harmonyexcursions@outlook.com?subject=Reserva%20de%20Producto%202&body=Me%20interesa%20reservar%20el%20Producto%202." class="btn-reservar-gmail" target="_blank">
@@ -180,7 +180,7 @@
                 Enjoy a VIP experience with a private speedboat ride to Saona Island. Relax on the stunning beaches, snorkel in vibrant reefs, and swim in natural pools. Savor an all-inclusive buffet lunch and unlimited drinks. A personalized, unforgettable day in paradise!</p>
             <div class="precio">$2800</div>
             <!-- Botones de reserva -->
-            <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20Producto%203%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
+            <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20la%20Private speedboat para 16 to 20 PAX!" class="btn-reservar" target="_blank">
                 BOOKING NOW (WhatsApp)
             </a>
             <a href="mailto:harmonyexcursions@outlook.com?subject=Reserva%20de%20Producto%203&body=Me%20interesa%20reservar%20el%20Producto%203." class="btn-reservar-gmail" target="_blank">
