--- a/HIGUEY CITY TOUR PRIVATE.html
+++ b/HIGUEY CITY TOUR PRIVATE.html
@@ -147,11 +147,10 @@
             <h3>1 PAX</h3>
             <p>Enjoy a cultural tour of Higuey, starting with a visit to the Basilica of Our Lady of Altagracia, an important religious site. Then, explore the public market, where you can see local products and crafts. The tour includes a traditional Dominican lunch and a brief visit to Higuey’s historic center. Perfect for those wanting to experience the culture and traditions of the Dominican Republic's eastern region.</p>
             <div class="precio">$60</div>
-            <!-- Botones de reserva -->
-            <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20Producto%201%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
+            <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20Tour a Higuey city!" class="btn-reservar" target="_blank">
                 BOOKING NOW (WhatsApp)
             </a>
-            <a href="mailto:rcedanorijo@gmail.com?subject=Reserva%20de%20Producto%201&body=Me%20interesa%20reservar%20el%20Producto%201." class="btn-reservar-gmail" target="_blank">
+            <a href="mailto:harmonyexcursions@outlook.com?subject=Reserva%20de%20Tour%202&body=Me%20interesa%20reservar%20el%20Tour a Higuey%20City." class="btn-reservar-gmail" target="_blank">
                 BOOKING NOW (Gmail)
             </a>
         </div>
@@ -165,10 +164,10 @@
                 Enjoy a personalized tour of Higuey, starting with a visit to the Basilica of Our Lady of Altagracia, a key religious site. Next, explore the public market, where you can see local products and crafts. The tour also includes a traditional Dominican lunch at a local restaurant, and a visit to Higuey’s historic center. Ideal for those looking for an intimate experience of the Dominican Republic’s culture and heritage.</p>
             <div class="precio">$120</div>
             <!-- Botones de reserva -->
-            <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20Producto%202%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
+            <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20private Tour a Higuey city!" class="btn-reservar" target="_blank">
                 BOOKING NOW (WhatsApp)
             </a>
-            <a href="mailto:harmonyexcursions@outlook.com?subject=Reserva%20de%20Producto%202&body=Me%20interesa%20reservar%20el%20Producto%202." class="btn-reservar-gmail" target="_blank">
+            <a href="mailto:harmonyexcursions@outlook.com?subject=Reserva%20de%20Tour%202&body=Me%20interesa%20reservar%20el%20private Tour a Higuey%20City." class="btn-reservar-gmail" target="_blank">
                 BOOKING NOW (Gmail)
             </a>
         </div>
