--- a/Santo Domingo.html
+++ b/Santo Domingo.html
@@ -233,7 +233,7 @@ Enjoy a complete tour of the historic city of Santo Domingo. Stroll along the Ma
             var precioTotal = document.getElementById("precio-total").textContent.replace('Precio Total: $', '');
 
             // Crear el mensaje de WhatsApp
-            var mensaje = "Hola, me interesa reservar la aventura en buggys. Aquí están mis datos:\n";
+            var mensaje = "Hola, me interesa reservar el Tour a Santo DOmingo. Aquí están mis datos:\n";
             mensaje += "Nombre: " + nombre + " " + apellido + "\n";
             mensaje += "Correo electrónico: " + email + "\n";
             mensaje += "Hotel: " + hotel + "\n";
