--- a/delfines.html
+++ b/delfines.html
@@ -159,6 +159,7 @@
         <p>
             Get ready for an exhilarating Buggys adventure through the diverse terrains of the Dominican Republic. Hop into a powerful buggys vehicle and navigate through rugged trails, lush forests, and scenic landscapes. Your expert guide will lead you through exciting off-road paths, crossing rivers and exploring hidden gems of nature. This off-road adventure offers a thrilling experience while immersing you in the island's beauty, perfect for adrenaline seekers and nature lovers alike. Discover the Dominican Republic in an entirely new way with this unforgettable buggys experience.
         </p>
+        <div class="precio">$110</div>
 
         <!-- Formulario de compra -->
         <form id="form-compra">
@@ -248,7 +249,7 @@
             btnWhatsApp.style.display = "inline-block"; // Mostrar el enlace de WhatsApp
 
             // Crear el enlace para Gmail
-            var enlaceGmail = "mailto:harmonyexcursions@outlook.com?subject=Reserva%20de%20Producto%20Buggy&body=" + mensajeCodificado;
+            var enlaceGmail = "mailto:harmonyexcursions@outlook.com?subject=Reserva%20de%20Excursion%20Con los Delfines&body=" + mensajeCodificado;
             
             // Mostrar el enlace de Gmail
             var btnGmail = document.getElementById("btn-reservar-gmail");
