--- a/samana-island.html
+++ b/samana-island.html
@@ -230,7 +230,7 @@
             var precioTotal = document.getElementById("precio-total").textContent.replace('Precio Total: $', '');
 
             // Crear el mensaje de WhatsApp
-            var mensaje = "Hola, me interesa reservar la aventura en buggys. Aquí están mis datos:\n";
+            var mensaje = "Hola, me interesa reservar la Excursion a Samana. Aquí están mis datos:\n";
             mensaje += "Nombre: " + nombre + " " + apellido + "\n";
             mensaje += "Correo electrónico: " + email + "\n";
             mensaje += "Hotel: " + hotel + "\n";
