--- a/titanboatpuntacana.html
+++ b/titanboatpuntacana.html
@@ -236,7 +236,7 @@
             var precioTotal = document.getElementById("precio-total").textContent.replace('Precio Total: $', '');
 
             // Crear el mensaje de WhatsApp
-            var mensaje = "Hola, me interesa reservar la aventura en buggys. Aquí están mis datos:\n";
+            var mensaje = "Hola, me interesa reservar la aventura en el Titan Boat. Aquí están mis datos:\n";
             mensaje += "Nombre: " + nombre + " " + apellido + "\n";
             mensaje += "Correo electrónico: " + email + "\n";
             mensaje += "Hotel: " + hotel + "\n";
