--- a/saona-island-excursion-private-boat-from-10-to-60-people-all-incluided.html
+++ b/saona-island-excursion-private-boat-from-10-to-60-people-all-incluided.html
@@ -152,7 +152,7 @@
     <body>
     
         <!-- Botón "Regresar" -->
-        <a href="javascript:history.back()" class="btn-regresar">Regresar</a>
+        <a href="javascript:history.back()" class="btn-regresar">Go back</a>
     
         <div class="producto-card">
             <img src="assets/img/speed1.jpeg" alt="Producto 1">
