--- a/HIGUEY CITY TOUR PRIVATE.html
+++ b/HIGUEY CITY TOUR PRIVATE.html
@@ -137,7 +137,7 @@
     <header>
         <!-- Botón de regresar -->
         <button class="btn-regresar" onclick="window.history.back();">←</button>
-        <h1>Catálogo de Productos</h1>
+        <h1>Product Catalog</h1>
     </header>
 
     <main>
@@ -147,7 +147,7 @@
             <h3>1 PAX</h3>
             <p>Enjoy a cultural tour of Higuey, starting with a visit to the Basilica of Our Lady of Altagracia, an important religious site. Then, explore the public market, where you can see local products and crafts. The tour includes a traditional Dominican lunch and a brief visit to Higuey’s historic center. Perfect for those wanting to experience the culture and traditions of the Dominican Republic's eastern region.</p>
             <div class="precio">$60</div>
-            <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20Tour a Higuey city!" class="btn-reservar" target="_blank">
+            <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20Tour a Higuey city! 1 PAX Precio $60 " class="btn-reservar" target="_blank">
                 BOOKING NOW (WhatsApp)
             </a>
             <a href="mailto:harmonyexcursions@outlook.com?subject=Reserva%20de%20Tour%202&body=Me%20interesa%20reservar%20el%20Tour a Higuey%20City." class="btn-reservar-gmail" target="_blank">
@@ -164,7 +164,7 @@
                 Enjoy a personalized tour of Higuey, starting with a visit to the Basilica of Our Lady of Altagracia, a key religious site. Next, explore the public market, where you can see local products and crafts. The tour also includes a traditional Dominican lunch at a local restaurant, and a visit to Higuey’s historic center. Ideal for those looking for an intimate experience of the Dominican Republic’s culture and heritage.</p>
             <div class="precio">$120</div>
             <!-- Botones de reserva -->
-            <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20private Tour a Higuey city!" class="btn-reservar" target="_blank">
+            <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20private Tour a Higuey city! 1 PAX Private Precio $120  " class="btn-reservar" target="_blank">
                 BOOKING NOW (WhatsApp)
             </a>
             <a href="mailto:harmonyexcursions@outlook.com?subject=Reserva%20de%20Tour%202&body=Me%20interesa%20reservar%20el%20private Tour a Higuey%20City." class="btn-reservar-gmail" target="_blank">
