--- a/Samanawithwhales.html
+++ b/Samanawithwhales.html
@@ -155,7 +155,7 @@
 
     <div class="producto-card">
         <img src="assets/img/ballenas_samana.jpg" alt="1 PAX">
-        <h3>Buggys </h3>
+        <h3>Samana with whales </h3>
         <p></p>
    
 
