--- a/private-speedboat-excursion-to-saona-island.html
+++ b/private-speedboat-excursion-to-saona-island.html
@@ -136,7 +136,7 @@
     <header>
         <!-- Botón de regresar -->
         <button class="btn-regresar" onclick="window.history.back();">←</button>
-        <h1>Catálogo de Productos</h1>
+        <h1>Product Catalog</h1>
     </header>
 
     <main>
