--- a/delfines.html
+++ b/delfines.html
@@ -155,9 +155,9 @@
 
     <div class="producto-card">
         <img src="paginas/delfines1.jpg" alt="1 PAX">
-        <h3>Buggys </h3>
+        <h3>Dolphins </h3>
         <p>
-            Get ready for an exhilarating Buggys adventure through the diverse terrains of the Dominican Republic. Hop into a powerful buggys vehicle and navigate through rugged trails, lush forests, and scenic landscapes. Your expert guide will lead you through exciting off-road paths, crossing rivers and exploring hidden gems of nature. This off-road adventure offers a thrilling experience while immersing you in the island's beauty, perfect for adrenaline seekers and nature lovers alike. Discover the Dominican Republic in an entirely new way with this unforgettable buggys experience.
+            Imagine yourself gliding through crystal-clear waters, surrounded by a pod of playful dolphins. As the sun reflects off the gentle waves, these intelligent creatures swim beside you, their sleek bodies cutting through the sea with grace.
         </p>
         <div class="precio">$110</div>
 
