--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -173,12 +173,11 @@
     <div class="container">
         <h2>About Us</h2>
         <p>
-            At <strong>Our Company</strong>, we specialize in providing innovative and high-quality solutions for the technology sector. Our mission is to transform ideas into successful projects by implementing cutting-edge technologies and a team committed to excellence.
+            At <strong>Our Company</strong>We specialize in offering innovative, high-quality tour experiences in the Dominican Republic. Our goal is to create unforgettable adventures by showcasing the island’s beauty and culture through unique, tailored excursions that exceed our clients’ expectations.
         </p>
 
         <p>
-            We have grown with the goal of offering products and services that not only meet our clients' needs but also exceed their expectations. We believe in innovation, sustainability, and teamwork as the fundamental pillars for success.
-        </p>
+            At the heart of everything we do is a dedicated team committed to excellence. We believe in exceeding our clients' expectations by focusing on sustainability, innovation, and teamwork. Through responsible and enriching travel, we strive to create experiences that leave a lasting impact on our visitors while promoting the preservation of the island's natural wonders and local communities
 
         <h3>Our Values</h3>
         <ul>
@@ -192,7 +191,7 @@
             </li>
             <li>
                 <i class="fas fa-users"></i>
-                Teamwork
+                out standing
             </li>
             <li>
                 <i class="fas fa-leaf"></i>
@@ -201,7 +200,7 @@
         </ul>
 
         <p>
-            Our company is made up of a multidisciplinary team of professionals passionate about their work. Each of them brings their experience and creativity to make our clients' projects a reality.
+            Our company is composed of a passionate, multidisciplinary team of professionals who are dedicated to their craft. Each team member contributes their expertise and creativity to turn our clients' travel experiences into unforgettable realities.
         </p>
 
         <!-- Buttons -->
