--- a/Samanawithwhales.html
+++ b/Samanawithwhales.html
@@ -155,7 +155,7 @@
 
     <div class="producto-card">
         <img src="assets/img/ballenas_samana.jpg" alt="1 PAX">
-        <h3>Samana with whales </h3>
+        <h3>Samana with whales  important! know the seasons of the whales contact us for information </h3>
         <p></p>
    
 
