--- a/HIGUEY CITY TOUR PRIVATE.html
+++ b/HIGUEY CITY TOUR PRIVATE.html
@@ -144,13 +144,15 @@
         <!-- Producto 1 -->
         <div class="producto-card">
             <img src="assets/img/basilica.jpg" alt="Producto 1">
-            <h3>1 PAX</h3>
+            <h3> 2 and 5 PAX</h3>
             <p>Enjoy a cultural tour of Higuey, starting with a visit to the Basilica of Our Lady of Altagracia, an important religious site. Then, explore the public market, where you can see local products and crafts. The tour includes a traditional Dominican lunch and a brief visit to Higuey’s historic center. Perfect for those wanting to experience the culture and traditions of the Dominican Republic's eastern region.</p>
-            <div class="precio">$60</div>
-            <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20Tour a Higuey city! 1 PAX Precio $60 " class="btn-reservar" target="_blank">
+            <div class="precio">$130
+
+            </div>
+            <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20Tour a Higuey city!  2 and 5 PAX Precio $130 " class="btn-reservar" target="_blank">
                 BOOKING NOW (WhatsApp)
             </a>
-            <a href="mailto:harmonyexcursions@outlook.com?subject=Reserva%20de%20Tour%202&body=Me%20interesa%20reservar%20el%20Tour a Higuey%20City." class="btn-reservar-gmail" target="_blank">
+            <a href="mailto:harmonyexcursions@outlook.com?subject=Reserva%20de%20Tour%202&body=¡Me%20interesa%20el%20Tour a Higuey city!  2 and 5 PAX Precio $130 " class="btn-reservar-gmail" target="_blank">
                 BOOKING NOW (Gmail)
             </a>
         </div>
@@ -158,19 +160,35 @@
         <!-- Producto 2 -->
         <div class="producto-card">
             <img src="assets/img/Basílica-de-Nuestra-Señora-de-la-Altagracia-672x372-1.jpg" alt="Producto 2">
-            <h3>1 PAX Private</h3>
+            <h3> 6 and 10 PAX Private</h3>
             <p>Private Higuey Tour: Basilica and Public Market
 
                 Enjoy a personalized tour of Higuey, starting with a visit to the Basilica of Our Lady of Altagracia, a key religious site. Next, explore the public market, where you can see local products and crafts. The tour also includes a traditional Dominican lunch at a local restaurant, and a visit to Higuey’s historic center. Ideal for those looking for an intimate experience of the Dominican Republic’s culture and heritage.</p>
-            <div class="precio">$120</div>
+            <div class="precio">$180</div>
             <!-- Botones de reserva -->
-            <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20private Tour a Higuey city! 1 PAX Private Precio $120  " class="btn-reservar" target="_blank">
+            <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20private Tour a Higuey city!  6 and 10 PAX Private Precio $180  " class="btn-reservar" target="_blank">
                 BOOKING NOW (WhatsApp)
             </a>
-            <a href="mailto:harmonyexcursions@outlook.com?subject=Reserva%20de%20Tour%202&body=Me%20interesa%20reservar%20el%20private Tour a Higuey%20City." class="btn-reservar-gmail" target="_blank">
+            <a href="mailto:harmonyexcursions@outlook.com?subject=Reserva%20de%20Tour%202&body=¡Me%20interesa%20el%20private Tour a Higuey city!  6 and 10 PAX Private Precio $180" class="btn-reservar-gmail" target="_blank">
                 BOOKING NOW (Gmail)
             </a>
         </div>
+  <!-- Producto 3 -->
+  <div class="producto-card">
+    <img src="assets/img/Basílica-de-Nuestra-Señora-de-la-Altagracia-672x372-1.jpg" alt="Producto 3">
+    <h3>10 and 15 PAX Private</h3>
+    <p>Private Higuey Tour: Basilica and Public Market
+
+        Enjoy a personalized tour of Higuey, starting with a visit to the Basilica of Our Lady of Altagracia, a key religious site. Next, explore the public market, where you can see local products and crafts. The tour also includes a traditional Dominican lunch at a local restaurant, and a visit to Higuey’s historic center. Ideal for those looking for an intimate experience of the Dominican Republic’s culture and heritage.</p>
+    <div class="precio">$220</div>
+    <!-- Botones de reserva -->
+    <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20private Tour a Higuey city! 10 and 15 PAX Private Precio $220  " class="btn-reservar" target="_blank">
+        BOOKING NOW (WhatsApp)
+    </a>
+    <a href="mailto:harmonyexcursions@outlook.com?subject=Reserva%20de%20Tour%203&body=¡Me%20interesa%20el%20private Tour a Higuey city! 10 and 15 PAX Private Precio $220" class="btn-reservar-gmail" target="_blank">
+        BOOKING NOW (Gmail)
+    </a>
+</div>
 
     
         </div>
