--- a/private-speedboat-excursion-to-saona-island.html
+++ b/private-speedboat-excursion-to-saona-island.html
@@ -142,7 +142,7 @@
     <main>
         <!-- Producto 1 -->
         <div class="producto-card">
-            <img src="assets/img/private1.jpeg" alt="Producto 1">
+            <img src="paginas/Speed-boat-Punta-Cana.jpg" alt="Producto 1">
             <h3>6 TO 10 PAX</h3>
             <p>Saona Island All-Inclusive + Private Speedboat Excursion
                 Enjoy a VIP experience with a private speedboat ride to Saona Island. Relax on the stunning beaches, snorkel in vibrant reefs, and swim in natural pools. Savor an all-inclusive buffet lunch and unlimited drinks. A personalized, unforgettable day in paradise!</p>
@@ -158,7 +158,7 @@
 
         <!-- Producto 2 -->
         <div class="producto-card">
-            <img src="assets/img/private2.jpeg" alt="Producto 2">
+            <img src="paginas/83.jpg" alt="Producto 2">
             <h3>11 TO 15 PAX</h3>
             <p>Saona Island All-Inclusive + Private Speedboat Excursion
                 Enjoy a VIP experience with a private speedboat ride to Saona Island. Relax on the stunning beaches, snorkel in vibrant reefs, and swim in natural pools. Savor an all-inclusive buffet lunch and unlimited drinks. A personalized, unforgettable day in paradise!</p>
@@ -174,7 +174,7 @@
 
         <!-- Producto 3 -->
         <div class="producto-card">
-            <img src="assets/img/private2.jpeg" alt="Producto 3">
+            <img src="-processed.avif" alt="Producto 3">
             <h3>16 TO 20 PAX</h3>
             <p>Saona Island All-Inclusive + Private Speedboat Excursion
                 Enjoy a VIP experience with a private speedboat ride to Saona Island. Relax on the stunning beaches, snorkel in vibrant reefs, and swim in natural pools. Savor an all-inclusive buffet lunch and unlimited drinks. A personalized, unforgettable day in paradise!</p>
