--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@ html[lang="es"] {
     <a href="https://wa.me/18496071995?text=Hola%2C%20estoy%20interesado%20en%20reservar%20una%20excursi%C3%B3n%20con%20ustedes.%20%3A" 
        class="animado"
        style="display: inline-block; padding: 20px 40px; background-color: #d43f3a; color: white; font-size: 20px; font-weight: bold; border-radius: 5px; text-decoration: none; transition: background-color 0.3s ease; margin-top: 30px;">
-       Book your tour now
+       Book your tour now.
 
     </a>
 </div>
